src/snapshots/dilaria__lex__test__string.snap
---
source: src/lex.rs
assertion_line: 370
expression: tokens

---
[
    String(
        "uwu",
    ),
]
