src/snapshots/dilaria__lex__test__strings.snap
---
source: src/lex.rs
expression: tokens
---
[
    ParenO,
    String(
        "hi",
    ),
    String(
        "uwu",
    ),
    String(
        "\"uwu\"",
    ),
    String(
        "no \\ u",
    ),
    ParenC,
]
