src/snapshots/dilaria__lex__test__trailing_underscore_number.snap
---
source: src/lex.rs
assertion_line: 375
expression: tokens

---
[
    Number(
        100.0,
    ),
]
