src/snapshots/dilaria__lex__test__underscore_number.snap
---
source: src/lex.rs
assertion_line: 375
expression: tokens

---
[
    Number(
        1000000.0,
    ),
]
